update status bulan january

--- a/status_meter_plaju_jan.html
+++ b/status_meter_plaju_jan.html
@@ -117,7 +117,7 @@ body {
 
 #status_308 {
   font-size: 30px;
-  color: yellow;
+  color: green;
 }
 
 #status_1000 {
@@ -233,7 +233,7 @@ body {
 <div class="sidenav">
   <a href="index.html">LOG OUT</a>
   <a href="#">STATUS</a>
-  <a href="meter_362.html">METER 362</a>
+  <a href="#">METER 362</a>
   <a href="#">METER 310</a>
   <a href="#">METER 320</a>
   <a href="#">METER 318</a>
@@ -355,12 +355,12 @@ body {
         <td>FQIT 0308</td>
         <td>LOADING PLAJU</td>
         <td>AVTUR</td>
-        <td>DBB MOV-D passing</td>
-        <td>Perbaikan Slip Seal</td>
-        <td>PBAS</td>                    
+        <td></td>
+        <td></td>
+        <td></td>                    
         <td id="status_308" style="text-align: center">&#9899</td>
-        <td>Slip Seal dalam proses perbaikan</td>
-        <td>Desember 2017 - Januari 2018</td>
+        <td></td>
+        <td></td>
     </tr>
     <tr>
         <td>7</td>
